Modified pre-existing files with necessary contents,installed different necessary packages and setup prismaschema

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.1",
-    "@prisma/client": "^6.7.0",
+    "@prisma/client": "^6.10.1",
     "daisyui": "^5.0.35",
     "eslint-config-prettier": "^10.1.5",
     "next": "15.3.2",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.25",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.7.0",
     "react": "^19.0.0",
